fix markdown actions button spacing

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -243,6 +243,5 @@ select[data-testid="example-pairing-select"] {
 }
 
 .markdown-actions-container {
-  margin-top: var(--ifm-leading);
-  margin-bottom: var(--ifm-leading);
+  margin-bottom: calc(1.25 * var(--ifm-leading));
 }
